teacher list + create, refactor models